--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="column right">
                         <div class="text">I'm Kakileti Sriram and I am <span>WebDeveloper</span></div>
                         <p>
-                           Hi, I'm Aravind Reddy from Amalapuram currently pursuing my Bachelors in National Institute of Technology, Durgapur
+                           Hi, I'm Kakileti Sriram from Amalapuram currently pursuing my Bachelors in National Institute of Technology, Durgapur
                           
                         </p>
                         <p>
