--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             <div class="text">Authentication System</div>
                             <p>Created an Authentication System from scratch providing providers such as GITHUB, Facebook, LinkedIN, Google. A user can login through any provider using same mail such that the data will be similar. Used cookies and session for Authentication</p>
                             <p>
-                                <span>Visit gitHub to see more</span>
+                                <span><a href="https://authentication-delta.vercel.app/" target="_blank">Click Here for Website</a></span>
                             </p>
                         </div>
                     </div>
